--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ email-validator==2.1.0.post1
 Flask==3.1.0
 google-auth==2.38.0
 google-auth-oauthlib==1.2.1
+gunicorn==20.1.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
