--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pymongo==4.11.2
 python-dotenv==1.0.1
+pytz==2025.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
